--- a/cse.html
+++ b/cse.html
@@ -8,7 +8,7 @@ in Europe to translate the name of technical or engineering informatics academic
 
 
 <p>To go to home page click here</p>
-<a href="https://github.dev/SaiTejaMantha/Glen-Maxwell">click here</a>
+<a href="https://saitejamantha.github.io/Glen-Maxwell/">click here</a>
 </body>
 </head>
 </html>
